--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Codici & Password - Nuova Password</title>
 
-    <link rel="manifest" href="manifest.json?v=5.7" />
+    <link rel="manifest" href="manifest.json?v=3.1" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
 
     <!-- Fonts -->
@@ -18,11 +18,12 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
         rel="stylesheet" />
 
-    <!-- TITANIUM AUTH SYSTEM V6.0 (Pure CSS) -->
-    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
-    <link rel="stylesheet" href="assets/css/auth_accesso.css?v=6.0">
-    <!-- Core UI per Toast (Protocollo V3) -->
-    <script type="module" src="assets/js/ui-core.js?v=2.2"></script>
+    <!-- TITANIUM CORE & ACCESS SYSTEM (Protocollo V3.1) -->
+    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/accesso.css?v=3.1">
+
+    <!-- Core UI & Context (Protocollo V3.1) -->
+    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 </head>
 
 <body>
@@ -37,76 +38,73 @@
                 <span class="material-symbols-outlined" style="font-size: 16px;">expand_more</span>
             </button>
             <div class="lang-dropdown" id="lang-dropdown">
-                <!-- JS will populate this -->
+                <!-- JS popola questo -->
             </div>
         </div>
 
-        <!-- Scenografia -->
+        <!-- Scenografia Protocollo V3.1 -->
         <div class="glass-glow"></div>
-        <div class="auth-header"></div>
-        <div class="auth-footer"></div>
+        <div class="accesso-header"></div>
+        <div class="accesso-footer"></div>
 
         <!-- Card Nuova Password -->
         <div class="titanium-vault border-glow">
 
-            <!-- Icona -->
+            <!-- Icona Centrale -->
             <div class="security-icon-box">
                 <span class="material-symbols-outlined">vpn_key</span>
             </div>
 
             <!-- Titoli -->
-            <h1 class="auth-title" data-t="set_password_page_title">Nuova Password</h1>
-            <p class="auth-subtitle" data-t="password_req_title">Scegli una password sicura</p>
+            <h1 class="accesso-title" data-t="set_password_page_title">Nuova Password</h1>
+            <p class="accesso-subtitle" data-t="password_req_title">Scegli una password sicura</p>
 
-            <!-- Form -->
+            <!-- Form Salvataggio -->
             <form id="new-password-form">
 
                 <!-- Nuova Password -->
-                <div class="auth-form-group">
-                    <label class="auth-label" data-t="new_password">Nuova Password</label>
+                <div class="accesso-form-group">
+                    <label class="accesso-label" data-t="new_password">Nuova Password</label>
                     <input id="new-password" name="new-password" type="password" autocomplete="new-password" required
-                        class="auth-input" data-t="password_placeholder_reg" placeholder="********">
-                    <button type="button" class="toggle-password">
+                        class="accesso-input" data-t-placeholder="password_placeholder_reg" placeholder="********">
+
+                    <button type="button" class="toggle-password" id="btn-toggle-password" aria-label="Mostra Password">
                         <span class="material-symbols-outlined">visibility</span>
                     </button>
                 </div>
 
                 <!-- Conferma Password -->
-                <div class="auth-form-group">
-                    <label class="auth-label" data-t="confirm_new_password">Conferma Password</label>
+                <div class="accesso-form-group">
+                    <label class="accesso-label" data-t="confirm_new_password">Conferma Password</label>
                     <input id="confirm-password" name="confirm-password" type="password" autocomplete="new-password"
-                        required class="auth-input" placeholder="********">
+                        required class="accesso-input" placeholder="********">
                 </div>
 
-                <!-- Submit -->
-                <button type="submit" class="auth-btn" data-t="save_new_pass">
+                <!-- Submit Button -->
+                <button type="submit" id="new-pass-submit-btn" class="accesso-btn" data-t="save_new_pass">
                     <span class="material-symbols-outlined" style="font-size: 20px;">save</span>
                     Salva Password
                 </button>
 
             </form>
 
+            <!-- Annulla Link -->
             <div style="text-align: center; margin-top: 1.5rem;">
-                <a href="index.html" id="cancel-password-update" class="link-register"
-                    style="font-size: 0.75rem; color: #a78bfa;" data-t="cancel">
+                <a href="index.html" id="cancel-password-update" class="link-register" data-t="cancel">
                     Annulla
                 </a>
             </div>
 
             <!-- Footer Legale -->
             <div class="legal-footer">
-                © 2026 BM Service S.R.L. - <span data-t="version">Titanium V6.0</span>
+                © 2026 BM Service S.R.L. - <span data-t="version">Titanium V3.1</span>
             </div>
 
         </div>
     </div>
 
     <!-- Scripts -->
-    <!-- Toast Container -->
-    <div id="toast-container"></div>
-
-    <!-- Scripts -->
-    <script type="module" src="assets/js/imposta_nuova_password.js?v=2.2"></script>
+    <script type="module" src="assets/js/imposta_nuova_password.js?v=3.1"></script>
 
 </body>
 
