--- a/Frontend/public/privacy.html
+++ b/Frontend/public/privacy.html
@@ -67,7 +67,8 @@
             <div class="settings-item" style="cursor: default;">
                 <div class="settings-item-header" style="flex-direction: column; align-items: start; gap: 0.75rem;">
                     <div class="settings-item-info">
-                        <div class="settings-icon-box bg-emerald-glass">
+                        <div class="settings-icon-box"
+                            style="background: rgba(76, 175, 80, 0.1); color: var(--accent-emerald);">
                             <span class="material-symbols-outlined">shield_person</span>
                         </div>
                         <div class="settings-text">
@@ -86,7 +87,8 @@
             <div class="settings-item" style="cursor: default;">
                 <div class="settings-item-header" style="flex-direction: column; align-items: start; gap: 0.75rem;">
                     <div class="settings-item-info">
-                        <div class="settings-icon-box bg-blue-glass">
+                        <div class="settings-icon-box"
+                            style="background: rgba(33, 150, 243, 0.1); color: var(--accent-blue);">
                             <span class="material-symbols-outlined">source</span>
                         </div>
                         <div class="settings-text">
@@ -112,7 +114,8 @@
             <div class="settings-item" style="cursor: default;">
                 <div class="settings-item-header" style="flex-direction: column; align-items: start; gap: 0.75rem;">
                     <div class="settings-item-info">
-                        <div class="settings-icon-box bg-purple-glass">
+                        <div class="settings-icon-box"
+                            style="background: rgba(156, 39, 176, 0.1); color: var(--accent-purple);">
                             <span class="material-symbols-outlined">lock</span>
                         </div>
                         <div class="settings-text">
@@ -133,7 +136,8 @@
             <div class="settings-item" style="cursor: default;">
                 <div class="settings-item-header" style="flex-direction: column; align-items: start; gap: 0.75rem;">
                     <div class="settings-item-info">
-                        <div class="settings-icon-box bg-rose-glass">
+                        <div class="settings-icon-box"
+                            style="background: rgba(244, 67, 54, 0.1); color: var(--accent-red);">
                             <span class="material-symbols-outlined">share</span>
                         </div>
                         <div class="settings-text">
@@ -152,7 +156,8 @@
             <div class="settings-item" style="cursor: default;">
                 <div class="settings-item-header" style="flex-direction: column; align-items: start; gap: 0.75rem;">
                     <div class="settings-item-info">
-                        <div class="settings-icon-box bg-amber-glass">
+                        <div class="settings-icon-box"
+                            style="background: rgba(255, 193, 7, 0.1); color: var(--accent-amber);">
                             <span class="material-symbols-outlined">gavel</span>
                         </div>
                         <div class="settings-text">
