--- a/Frontend/public/regole_scadenze.html
+++ b/Frontend/public/regole_scadenze.html
@@ -63,7 +63,8 @@
                     style="cursor: pointer;">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box bg-blue-glass">
+                            <div class="settings-icon-box"
+                                style="background: rgba(33, 150, 243, 0.1); color: var(--accent-blue);">
                                 <span class="material-symbols-outlined">directions_car</span>
                             </div>
                             <div class="settings-text">
@@ -81,7 +82,8 @@
                     style="cursor: pointer;">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box bg-emerald-glass">
+                            <div class="settings-icon-box"
+                                style="background: rgba(76, 175, 80, 0.1); color: var(--accent-emerald);">
                                 <span class="material-symbols-outlined">description</span>
                             </div>
                             <div class="settings-text">
@@ -99,7 +101,8 @@
                     style="cursor: pointer;">
                     <div class="settings-item-header">
                         <div class="settings-item-info">
-                            <div class="settings-icon-box bg-amber-glass">
+                            <div class="settings-icon-box"
+                                style="background: rgba(255, 193, 7, 0.1); color: var(--accent-amber);">
                                 <span class="material-symbols-outlined">settings_applications</span>
                             </div>
                             <div class="settings-text">
