--- a/Frontend/public/account_azienda.html
+++ b/Frontend/public/account_azienda.html
@@ -23,95 +23,71 @@
     <!-- Design System Master (Titanium Protocol V3.0) -->
     <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
     <link rel="stylesheet" href="assets/css/auth_account.css?v=3.5">
-    <style>
-        body {
-            background-color: #e2e8f0;
-        }
-
-        /* BLOCCO INTERAZIONI NON DESIDERATE (UX NATIVA) */
-        .no-select {
-            -webkit-user-select: none;
-            -webkit-touch-callout: none;
-            user-select: none;
-        }
-
-        .no-select input,
-        .no-select textarea,
-        .no-select [contenteditable="true"] {
-            -webkit-user-select: text;
-            user-select: text;
-        }
-    </style>
 </head>
 
-<body class="bg-[#e2e8f0] text-[#0A162A] font-display antialiased">
-    <div
-        class="relative flex h-full min-h-screen w-full flex-col max-w-md mx-auto bg-[#e2e8f0] shadow-2xl overflow-hidden">
+<body style="background-color: var(--bg-primary); margin: 0; padding: 0; overflow-x: hidden;">
+    <div class="titanium-box">
+        <div class="glass-glow"></div>
 
-
-        <!-- Header (Fixed Glass) -->
-        <header id="company-header"
-            class="fixed top-0 left-0 right-0 mx-auto w-full max-w-md bg-[#e2e8f0]/20 backdrop-blur-sm border-b border-black/5 z-50 transition-colors">
-            <div class="flex items-center px-4 h-16">
-                <a id="btn-back" href="lista_aziende.html"
-                    class="flex size-10 items-center justify-center rounded-full hover:bg-black/5 transition-colors text-slate-900">
-                    <span class="material-symbols-outlined text-[24px]">arrow_back</span>
-                </a>
-                <h1 id="page-title" class="text-lg font-bold text-slate-900 flex-1 text-center truncate px-2">
-                    Caricamento...</h1>
-                <div class="flex items-center gap-1">
-                    <button id="sort-btn" onclick="toggleSort()"
-                        class="flex items-center justify-center size-10 rounded-full hover:bg-black/5 transition-colors text-slate-900"
-                        title="Ordina A-Z">
-                        <span class="material-symbols-outlined text-[24px]">sort_by_alpha</span>
-                    </button>
-                    <a id="btn-add-account" href="#"
-                        class="flex items-center justify-center size-10 rounded-full hover:bg-black/5 transition-colors text-slate-900"
-                        title="Aggiungi Account">
-                        <span class="material-symbols-outlined text-[24px]">add</span>
+        <!-- Standard Titanium Header -->
+        <header class="titanium-header">
+            <div class="header-balanced-container">
+                <div class="header-left">
+                    <a id="btn-back" href="lista_aziende.html" class="btn-icon-header">
+                        <span class="material-symbols-outlined">arrow_back</span>
                     </a>
-                    <a id="btn-home" href="home_page.html"
-                        class="flex items-center justify-center size-10 rounded-full hover:bg-black/5 transition-colors text-slate-900"
-                        title="Home">
-                        <span class="material-symbols-outlined text-[24px]">home</span>
+                </div>
+                <div class="header-center">
+                    <h1 id="page-title" class="header-title">Caricamento...</h1>
+                </div>
+                <div class="header-right">
+                    <button id="sort-btn" onclick="toggleSort()" class="btn-icon-header">
+                        <span class="material-symbols-outlined">sort_by_alpha</span>
+                    </button>
+                    <a id="btn-add-account" href="#" class="btn-icon-header">
+                        <span class="material-symbols-outlined">add</span>
+                    </a>
+                    <a id="btn-home" href="home_page.html" class="btn-icon-header">
+                        <span class="material-symbols-outlined">home</span>
                     </a>
                 </div>
             </div>
         </header>
 
         <!-- Header Spacer -->
-        <div class="h-16 w-full shrink-0"></div>
+        <div class="spacer-header"></div>
 
         <main class="titanium-main">
             <!-- Search Bar -->
-            <div class="px-4 pt-4 pb-2">
-                <div class="relative">
-                    <span
-                        class="material-symbols-outlined absolute left-3 top-1/2 -translate-y-1/2 text-slate-400 text-[20px]">search</span>
+            <div style="padding: 1rem;">
+                <div style="position: relative;">
+                    <span class="material-symbols-outlined"
+                        style="position: absolute; left: 0.75rem; top: 50%; transform: translateY(-50%); color: var(--text-secondary); font-size: 20px;">search</span>
                     <input type="search" placeholder="Cerca account..."
-                        class="w-full pl-10 pr-4 py-2.5 rounded-xl border border-slate-200 bg-white focus:outline-none focus:ring-2 focus:ring-primary/20 transition-all text-sm">
+                        style="width: 100%; padding-left: 2.5rem; padding-right: 1rem; padding-top: 0.75rem; padding-bottom: 0.75rem; border-radius: 0.75rem; border: 1px solid var(--border-color); background: var(--surface-sub); color: var(--text-primary); outline: none;">
                 </div>
             </div>
 
             <!-- Accounts Container -->
-            <div id="accounts-container" class="px-4 pb-4">
-                <!-- Loading Spinner (will be replaced by JS) -->
-                <div class="flex flex-col items-center justify-center py-12">
-                    <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-primary"></div>
-                    <p class="text-slate-500 mt-4 text-sm">Caricamento account...</p>
+            <div id="accounts-container"
+                style="padding-left: 1rem; padding-right: 1rem; padding-bottom: 3rem; display: flex; flex-direction: column; gap: 0.75rem;">
+                <!-- Loading Spinner -->
+                <div
+                    style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding-top: 3rem; padding-bottom: 3rem;">
+                    <div
+                        style="height: 3rem; width: 3rem; border-radius: 50%; border-bottom-width: 2px; border-style: solid; border-color: var(--accent-blue); animation: spin 2s linear infinite;">
+                    </div>
                 </div>
             </div>
 
             <!-- Toast Container -->
             <div id="toast-container"
-                class="fixed bottom-20 left-1/2 transform -translate-x-1/2 z-50 flex flex-col gap-2 pointer-events-none">
+                style="position: fixed; bottom: 5rem; left: 50%; transform: translateX(-50%); z-index: 50; display: flex; flex-direction: column; gap: 0.5rem; pointer-events: none;">
             </div>
         </main>
 
-        <!-- Bottom Glass Frame (Fixed) -->
-        <div
-            class="fixed bottom-0 left-0 right-0 max-w-md mx-auto h-16 pointer-events-none z-50 backdrop-blur-sm border-t transition-colors bg-[#e2e8f0]/20 border-black/5">
-        </div>
+        <!-- FOOTER PLACEHOLDER -->
+        <footer id="footer-placeholder"></footer>
     </div>
 
 
@@ -120,7 +96,6 @@
     <!-- Module Script -->
     <script src="assets/js/main.js"></script>
     <script type="module" src="assets/js/account_azienda.js?v=6"></script>
-    </div>
 </body>
 
 </html>
