--- a/Frontend/public/archivio_account.html
+++ b/Frontend/public/archivio_account.html
@@ -67,8 +67,8 @@
                 <!-- Selector -->
                 <div class="settings-item" style="padding: 0.8rem; margin-bottom: 0;">
                     <div class="settings-item-header">
-                        <div class="settings-icon-box bg-blue-glass"
-                            style="width: 32px; height: 32px; font-size: 1.1rem;">
+                        <div class="settings-icon-box"
+                            style="width: 32px; height: 32px; font-size: 1.1rem; background: rgba(33, 150, 243, 0.1); color: var(--accent-blue);">
                             <span class="material-symbols-outlined">filter_list</span>
                         </div>
                         <select id="archive-context-select"
@@ -104,8 +104,8 @@
             <!-- List Container -->
             <div id="accounts-container" style="display: flex; flex-direction: column; gap: 0.75rem;">
                 <!-- Loading State -->
-                <div class="flex flex-col items-center justify-center py-10"
-                    style="display: flex; flex-direction: column; align-items: center; opacity: 0.6;">
+                <div
+                    style="display: flex; flex-direction: column; align-items: center; opacity: 0.6; padding: 2.5rem 0;">
                     <div
                         style="width: 1.5rem; height: 1.5rem; border: 2px solid white; border-top-color: transparent; border-radius: 50%; animation: spin 1s linear infinite; margin-bottom: 0.5rem;">
                     </div>
