--- a/Frontend/public/lista_aziende.html
+++ b/Frontend/public/lista_aziende.html
@@ -28,72 +28,53 @@
     <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
     <link rel="stylesheet" href="assets/css/auth_account.css?v=3.7">
 
-    <style>
-        .material-symbols-outlined {
-            font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
-        }
-    </style>
 </head>
 
-<body class="antialiased">
+<body class="titanium-bg antialiased">
     <div class="titanium-box">
-        <!-- Faro Estetico -->
         <div class="glass-glow"></div>
 
-        <!-- Header (Fixed Glass) -->
-        <header
-            class="fixed top-0 left-0 right-0 mx-auto w-full md:max-w-3xl lg:max-w-5xl bg-[#0a0f1e]/20 backdrop-blur-sm border-b border-white/5 z-50 transition-colors">
-            <div class="flex items-center px-4 h-16 relative">
-                <div class="flex items-center gap-1 z-10">
-                    <a href="home_page.html"
-                        class="flex items-center justify-center size-10 rounded-full hover:bg-white/5 transition-colors text-white">
-                        <span class="material-symbols-outlined text-[24px]">arrow_back</span>
+        <!-- Standard Titanium Header -->
+        <header class="titanium-header">
+            <div class="header-balanced-container">
+                <div class="header-left">
+                    <a href="home_page.html" class="btn-icon-header">
+                        <span class="material-symbols-outlined">arrow_back</span>
                     </a>
-                    <button id="sort-btn"
-                        class="flex items-center justify-center size-10 rounded-full hover:bg-white/5 transition-colors text-white"
-                        title="Ordina A-Z">
-                        <span class="material-symbols-outlined text-[24px]">sort_by_alpha</span>
+                    <button id="sort-btn" class="btn-icon-header">
+                        <span class="material-symbols-outlined">sort_by_alpha</span>
                     </button>
                 </div>
-
-                <h1
-                    class="text-lg font-bold tracking-tight text-center text-white absolute inset-0 flex items-center justify-center pointer-events-none px-20">
-                    Aziende
-                </h1>
-
-                <div class="flex items-center gap-1 ml-auto z-10">
-                    <a href="aggiungi_nuova_azienda.html"
-                        class="flex items-center justify-center size-10 rounded-full hover:bg-white/5 transition-colors text-primary"
-                        title="Aggiungi Azienda">
-                        <span class="material-symbols-outlined text-[24px]">add</span>
+                <div class="header-center">
+                    <h1 class="header-title">Aziende</h1>
+                </div>
+                <div class="header-right">
+                    <a href="aggiungi_nuova_azienda.html" class="btn-icon-header" style="color: var(--accent-blue);">
+                        <span class="material-symbols-outlined">add</span>
                     </a>
-                    <a href="home_page.html"
-                        class="flex items-center justify-center size-10 rounded-full hover:bg-white/5 transition-colors text-white">
-                        <span class="material-symbols-outlined text-[24px]">home</span>
+                    <a href="home_page.html" class="btn-icon-header">
+                        <span class="material-symbols-outlined">home</span>
                     </a>
                 </div>
             </div>
         </header>
 
         <!-- Header Spacer -->
-        <div class="h-16 w-full shrink-0"></div>
+        <div class="spacer-header"></div>
 
-        <main class="flex-1 overflow-y-auto no-scrollbar mb-24">
+        <main class="titanium-main">
             <!-- Companies List Container -->
-            <div id="aziende-list-container" class="flex flex-col gap-4 p-4">
-                <!-- Loading Spinner (will be replaced by JS) -->
+            <div id="aziende-list-container" class="flex flex-col gap-4 p-4 pb-24">
+                <!-- Loading Spinner -->
                 <div class="flex flex-col items-center justify-center py-12">
-                    <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-primary"></div>
-                    <p class="text-slate-500 mt-4 text-sm">Caricamento aziende...</p>
+                    <div class="animate-spin rounded-full h-12 w-12 border-b-2"
+                        style="border-color: var(--accent-blue);"></div>
                 </div>
             </div>
         </main>
 
-    </div>
-
-    <!-- Bottom Glass Frame (Fixed) -->
-    <div
-        class="fixed bottom-0 left-0 right-0 w-full md:max-w-3xl lg:max-w-5xl mx-auto h-16 pointer-events-none z-50 backdrop-blur-sm border-t transition-colors bg-[#0a0f1e]/20 border-white/5">
+        <!-- FOOTER PLACEHOLDER -->
+        <footer id="footer-placeholder"></footer>
     </div>
 
     <script src="assets/js/main.js"></script>
