--- a/Frontend/public/profilo_privato.html
+++ b/Frontend/public/profilo_privato.html
@@ -66,48 +66,45 @@
                 <div class="settings-group"
                     style="margin-top: 0; border: 1px solid var(--accent-blue); background: var(--surface-sub);">
                     <div style="padding: 1.5rem;">
-                        <div class="flex items-center gap-3 mb-4">
-                            <div class="settings-icon-box bg-blue-glass">
+                        <div style="display: flex; align-items: center; gap: 0.75rem; margin-bottom: 1rem;">
+                            <div class="settings-icon-box"
+                                style="background: rgba(33, 150, 243, 0.1); color: var(--accent-blue);">
                                 <span class="material-symbols-outlined">lightbulb</span>
                             </div>
                             <h3
-                                style="color:var(--text-primary); font-weight:900; letter-spacing:0.1em; font-size:0.875rem; text-transform:uppercase;">
+                                style="color:var(--text-primary); font-weight:900; letter-spacing:0.1em; font-size:0.875rem; text-transform:uppercase; margin: 0;">
                                 Guida Profilo</h3>
                         </div>
 
-                        <div class="space-y-4">
-                            <div class="flex gap-3">
+                        <div style="display: flex; flex-direction: column; gap: 1rem;">
+                            <div style="display: flex; gap: 0.75rem;">
                                 <span
-                                    class="size-6 bg-blue-500/20 text-blue-400 rounded-lg flex items-center justify-center text-xs font-bold">1</span>
-                                <p style="font-size:11px; color:var(--text-secondary); line-height:1.6;">Puoi gestire
-                                    ogni voce della pagina
-                                    (<span style="color:var(--text-primary); font-weight:bold;">Dati Personali,
-                                        Residenza, Utilità, Documenti,
-                                        Contatti, Note</span>)
-                                    utilizzando i tasti "+" o "edit" dedicati.</p>
+                                    style="width: 1.5rem; height: 1.5rem; background: rgba(33, 150, 243, 0.2); color: #64b5f6; border-radius: 0.5rem; display: flex; align-items: center; justify-content: center; font-size: 0.75rem; font-weight: bold; flex-shrink: 0;">1</span>
+                                <p style="font-size:11px; color:var(--text-secondary); line-height:1.6; margin: 0;">Puoi
+                                    gestire ogni voce della pagina (<span
+                                        style="color:var(--text-primary); font-weight:bold;">Dati Personali, Residenza,
+                                        Utilità, Documenti, Contatti, Note</span>) utilizzando i tasti "+" o "edit"
+                                    dedicati.</p>
                             </div>
-                            <div class="flex gap-3">
+                            <div style="display: flex; gap: 0.75rem;">
                                 <span
-                                    class="size-6 bg-blue-500/20 text-blue-400 rounded-lg flex items-center justify-center text-xs font-bold">2</span>
-                                <p style="font-size:11px; color:var(--text-secondary); line-height:1.6;">Usa i pulsanti
-                                    <span class="material-symbols-outlined"
+                                    style="width: 1.5rem; height: 1.5rem; background: rgba(33, 150, 243, 0.2); color: #64b5f6; border-radius: 0.5rem; display: flex; align-items: center; justify-content: center; font-size: 0.75rem; font-weight: bold; flex-shrink: 0;">2</span>
+                                <p style="font-size:11px; color:var(--text-secondary); line-height:1.6; margin: 0;">Usa
+                                    i pulsanti <span class="material-symbols-outlined"
                                         style="font-size: 14px; vertical-align: middle;">edit</span> per modificare i
-                                    dati in modo rapido tramite modali di sistema.
-                                </p>
+                                    dati in modo rapido tramite modali di sistema.</p>
                             </div>
-                            <div class="flex gap-3">
+                            <div style="display: flex; gap: 0.75rem;">
                                 <span
-                                    class="size-6 bg-blue-500/20 text-blue-400 rounded-lg flex items-center justify-center text-xs font-bold">3</span>
-                                <p style="font-size:11px; color:var(--text-secondary); line-height:1.6;">Seleziona la
-                                    <span style="color:var(--text-primary); font-weight:bold;">spunta QR</span> per
-                                    scegliere quali dati mostrare
-                                    quando condividi il tuo profilo.
-                                </p>
+                                    style="width: 1.5rem; height: 1.5rem; background: rgba(33, 150, 243, 0.2); color: #64b5f6; border-radius: 0.5rem; display: flex; align-items: center; justify-content: center; font-size: 0.75rem; font-weight: bold; flex-shrink: 0;">3</span>
+                                <p style="font-size:11px; color:var(--text-secondary); line-height:1.6; margin: 0;">
+                                    Seleziona la <span style="color:var(--text-primary); font-weight:bold;">spunta
+                                        QR</span> per scegliere quali dati mostrare quando condividi il tuo profilo.</p>
                             </div>
                         </div>
 
-                        <button type="button" class="titanium-btn-primary w-full mt-6 py-3 text-[10px] accordion-header"
-                            data-target="guida-pane">
+                        <button type="button" class="titanium-btn-primary w-full accordion-header"
+                            style="margin-top: 1.5rem; padding: 0.75rem 0; font-size: 10px;" data-target="guida-pane">
                             HO CAPITO, CHIUDI GUIDA
                         </button>
                     </div>
@@ -246,7 +243,8 @@
                         <div class="settings-item accordion-header" data-target="dati-personali">
                             <div class="settings-item-header">
                                 <div class="settings-item-info">
-                                    <div class="settings-icon-box bg-blue-glass">
+                                    <div class="settings-icon-box"
+                                        style="background: rgba(33, 150, 243, 0.1); color: var(--accent-blue);">
                                         <span class="material-symbols-outlined">person</span>
                                     </div>
                                     <div class="settings-text">
@@ -297,7 +295,8 @@
                         <div class="settings-item accordion-header" data-target="residenza-box">
                             <div class="settings-item-header">
                                 <div class="settings-item-info">
-                                    <div class="settings-icon-box bg-emerald-glass">
+                                    <div class="settings-icon-box"
+                                        style="background: rgba(76, 175, 80, 0.1); color: var(--accent-emerald);">
                                         <span class="material-symbols-outlined">home</span>
                                     </div>
                                     <div class="settings-text">
@@ -320,7 +319,8 @@
                         <div class="settings-item accordion-header" data-target="contatti-box">
                             <div class="settings-item-header">
                                 <div class="settings-item-info">
-                                    <div class="settings-icon-box bg-rose-glass">
+                                    <div class="settings-icon-box"
+                                        style="background: rgba(244, 67, 54, 0.1); color: var(--accent-red);">
                                         <span class="material-symbols-outlined">call</span>
                                     </div>
                                     <div class="settings-text">
@@ -348,7 +348,8 @@
                     <div class="settings-item accordion-header" data-target="utenze-box">
                         <div class="settings-item-header">
                             <div class="settings-item-info">
-                                <div class="settings-icon-box bg-amber-glass">
+                                <div class="settings-icon-box"
+                                    style="background: rgba(255, 193, 7, 0.1); color: var(--accent-amber);">
                                     <span class="material-symbols-outlined">bolt</span>
                                 </div>
                                 <div class="settings-text">
@@ -368,7 +369,8 @@
                     <div class="settings-item accordion-header" data-target="documenti-box">
                         <div class="settings-item-header">
                             <div class="settings-item-info">
-                                <div class="settings-icon-box bg-purple-glass">
+                                <div class="settings-icon-box"
+                                    style="background: rgba(156, 39, 176, 0.1); color: var(--accent-purple);">
                                     <span class="material-symbols-outlined">description</span>
                                 </div>
                                 <div class="settings-text">
@@ -390,7 +392,8 @@
                     <div class="settings-item accordion-header" data-target="emails-box">
                         <div class="settings-item-header">
                             <div class="settings-item-info">
-                                <div class="settings-icon-box bg-cyan-glass">
+                                <div class="settings-icon-box"
+                                    style="background: rgba(0, 188, 212, 0.1); color: var(--accent-cyan);">
                                     <span class="material-symbols-outlined">email</span>
                                 </div>
                                 <div class="settings-text">
