--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Codici & Password - Password Dimenticata</title>
 
-    <link rel="manifest" href="manifest.json?v=5.7" />
+    <link rel="manifest" href="manifest.json?v=3.1" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
 
     <!-- Fonts -->
@@ -18,11 +18,12 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
         rel="stylesheet" />
 
-    <!-- TITANIUM AUTH SYSTEM V6.0 (Pure CSS) -->
-    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
-    <link rel="stylesheet" href="assets/css/auth_accesso.css?v=6.0">
-    <!-- Core UI per Toast (Protocollo V3) -->
-    <script type="module" src="assets/js/ui-core.js?v=2.2"></script>
+    <!-- TITANIUM CORE & ACCESS SYSTEM (Protocollo V3.1) -->
+    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.1">
+    <link rel="stylesheet" href="assets/css/accesso.css?v=3.1">
+
+    <!-- Core UI & Context (Protocollo V3.1) -->
+    <script type="module" src="assets/js/ui-core.js?v=3.1"></script>
 </head>
 
 <body>
@@ -37,39 +38,39 @@
                 <span class="material-symbols-outlined" style="font-size: 16px;">expand_more</span>
             </button>
             <div class="lang-dropdown" id="lang-dropdown">
-                <!-- JS will populate this -->
+                <!-- JS popola questo -->
             </div>
         </div>
 
-        <!-- Scenografia -->
+        <!-- Scenografia Protocollo V3.1 -->
         <div class="glass-glow"></div>
-        <div class="auth-header"></div>
-        <div class="auth-footer"></div>
+        <div class="accesso-header"></div>
+        <div class="accesso-footer"></div>
 
         <!-- Card Reset -->
         <div class="titanium-vault border-glow">
 
-            <!-- Icona -->
+            <!-- Icona Centrale -->
             <div class="security-icon-box">
                 <span class="material-symbols-outlined">lock_reset</span>
             </div>
 
             <!-- Titoli -->
-            <h1 class="auth-title" data-t="reset_page_title">Recupera Password</h1>
-            <p class="auth-subtitle" data-t="reset_hint">Riceverai un link di ripristino</p>
+            <h1 class="accesso-title" data-t="reset_page_title">Recupera Password</h1>
+            <p class="accesso-subtitle" data-t="reset_hint">Riceverai un link di ripristino</p>
 
-            <!-- Form -->
+            <!-- Form Recupero -->
             <form id="reset-form">
 
                 <!-- Email -->
-                <div class="auth-form-group">
-                    <label class="auth-label" data-t="email_address_label">Email dell'account</label>
-                    <input id="email" name="email" type="email" autocomplete="email" required class="auth-input"
-                        data-t="placeholder_email" placeholder="mario.rossi@email.com">
+                <div class="accesso-form-group">
+                    <label class="accesso-label" data-t="email_address_label">Email dell'account</label>
+                    <input id="email" name="email" type="email" autocomplete="email" required class="accesso-input"
+                        data-t-placeholder="email_placeholder" placeholder="mario.rossi@email.com">
                 </div>
 
-                <!-- Submit -->
-                <button type="submit" class="auth-btn" data-t="send_instructions_btn">
+                <!-- Submit Button -->
+                <button type="submit" id="reset-submit-btn" class="accesso-btn" data-t="send_instructions_btn">
                     <span class="material-symbols-outlined" style="font-size: 20px;">send</span>
                     Invia email
                 </button>
@@ -78,28 +79,23 @@
 
             <!-- Back Link -->
             <div style="text-align: center; margin-top: 2rem;">
-                <a href="index.html" class="link-register" style="color:white; opacity:0.7; font-size:0.75rem;"
-                    data-t="back_to_login_link">
+                <a href="index.html" class="link-register" data-t="back_to_login_link">
                     <span class="material-symbols-outlined"
-                        style="font-size: 14px; vertical-align: middle; margin-right: 4px;">arrow_back</span>
+                        style="font-size: 16px; margin-right: 6px;">arrow_back</span>
                     Torna al Login
                 </a>
             </div>
 
             <!-- Footer Legale -->
             <div class="legal-footer">
-                © 2026 BM Service S.R.L. - <span data-t="version">Titanium V6.0</span>
+                © 2026 BM Service S.R.L. - <span data-t="version">Titanium V3.1</span>
             </div>
 
         </div>
     </div>
 
     <!-- Scripts -->
-    <!-- Toast Container -->
-    <div id="toast-container"></div>
-
-    <!-- Scripts -->
-    <script type="module" src="assets/js/reset_password.js?v=2.2"></script>
+    <script type="module" src="assets/js/reset_password.js?v=3.1"></script>
 
 </body>
 
