--- a/Frontend/public/scadenze.html
+++ b/Frontend/public/scadenze.html
@@ -114,8 +114,12 @@
     <script type="module" src="assets/js/ui-core.js?v=3.5"></script>
 </head>
 
-<body class="antialiased">
-    <div class="titanium-box">
+<body
+    style="font-family: 'Manrope', sans-serif; background-color: #0a0f1e; color: #f8fafc; margin: 0; padding: 0; overflow-x: hidden;"
+    class="antialiased">
+    <!-- 1. CONTENITORE PRINCIPALE (Standard Regola #2) -->
+    <div
+        style="position: relative; display: flex; flex-direction: column; width: 100%; min-height: 100vh; max-width: 48rem; margin-top: 0; margin-bottom: 0; margin-left: auto; margin-right: auto; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5); overflow: hidden; background-color: #0a0f1e; border-left: 1px solid rgba(255, 255, 255, 0.05); border-right: 1px solid rgba(255, 255, 255, 0.05);">
         <!-- Faro Estetico -->
         <div class="glass-glow"></div>
 
@@ -211,10 +215,13 @@
             <!-- List Content -->
             <div id="scadenze-list" class="settings-group" style="padding-bottom: 80px;">
                 <!-- Loading State -->
-                <div class="flex flex-col items-center justify-center py-20 opacity-30">
-                    <div class="size-10 border-2 border-white/5 border-t-blue-500 rounded-full animate-spin"></div>
-                    <p class="text-[9px] font-black uppercase tracking-[0.3em] mt-4" data-t="analyzing_data">Analisi
-                        dati...</p>
+                <div
+                    style="display: flex; flex-direction: column; align-items: center; justify-content: center; opacity: 0.3; padding: 5rem 0; gap: 1rem;">
+                    <div
+                        style="width: 40px; height: 40px; border: 2px solid rgba(255,255,255,0.05); border-top-color: var(--accent-blue); border-radius: 50%; animation: spin 2s linear infinite;">
+                    </div>
+                    <p style="font-size: 9px; font-weight: bold; text-transform: uppercase; letter-spacing: 3px; margin: 0;"
+                        data-t="analyzing_data">Analisi dati...</p>
                 </div>
             </div>
 
