--- a/backup_recovery/home_page.html
+++ b/backup_recovery/home_page.html
@@ -7,16 +7,10 @@
     <title data-t="home_page_title">Home Page</title>
 
     <!-- Titanium Engine Stack -->
-    <script src="assets/js/titanium-config.js?v=3.5"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="assets/css/auth_comune.css?v=3.0">
-    <link rel="stylesheet" href="assets/css/auth_account.css?v=3.5">
-    <script src="assets/js/ui-core.js?v=3.5"></script>
+    <script src="assets/js/titanium-config.js"></script>
+    <link rel="stylesheet" href="assets/css/titanium.css">
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <script src="assets/js/titanium-core.js"></script>
 
     <!-- PWA / Mobile Capable -->
     <link rel="manifest" href="manifest.json" />
@@ -29,19 +23,20 @@
 </head>
 
 <body class="titanium-bg">
-    <!-- HEADER PLACEHOLDER -->
-    <div id="header-placeholder"></div>
-
     <div class="titanium-box">
-        <div class="glass-glow pointer-events-none"></div>
+        <div class="glass-glow"></div>
+
+        <!-- HEADER PLACEHOLDER -->
+        <div id="header-placeholder"></div>
 
         <!-- MAIN (Data-Lock-UI for native effect) -->
         <main class="titanium-main" data-lock-ui>
 
             <div class="dashboard-grid">
                 <!-- SEZIONE 1: ACCESSO RAPIDO -->
-                <div class="dashboard-grid-2">
+                <div class="grid-2-cols">
                     <a href="area_privata.html" class="matrix-blue border-glow" data-ui-section="privato">
+                        <div class="glass-shine"></div>
                         <div class="bg-icon-container">
                             <span class="material-symbols-outlined titanium-icon-lg" role="img"
                                 aria-label="Icona Cassaforte Personale" data-t-aria="aria_private">lock</span>
@@ -53,6 +48,7 @@
                     </a>
 
                     <a href="lista_aziende.html" class="matrix-green border-glow" data-ui-section="azienda">
+                        <div class="glass-shine"></div>
                         <div class="bg-icon-container">
                             <span class="material-symbols-outlined titanium-icon-lg" role="img"
                                 aria-label="Icona Gestione Aziendale" data-t-aria="aria_company">apartment</span>
@@ -73,25 +69,15 @@
                     </div>
                     <div class="box-content-main">
                         <div class="box-header-flex">
-                            <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 0.25rem;">
-                                <span id="urgent-count-badge" class="urgent-badge loading-pulse"
-                                    style="margin-left: 0;">
-                                    <span id="urgent-count">---</span>
+                            <div class="title-group">
+                                <h3 data-t="section_deadlines_title">Scadenze</h3>
+                                <span id="urgent-count-badge" class="urgent-badge" style="opacity: 0;">
+                                    <span id="urgent-count">0</span>
                                 </span>
-                                <h3 data-t="section_deadlines_title" style="margin-bottom: 0;">Scadenze</h3>
                             </div>
                             <p data-ui="hint" data-t="section_deadlines_desc">Controlla i prossimi impegni</p>
                         </div>
-                        <div id="deadline-list-container" class="dashboard-dynamic-list">
-                            <div class="micro-list-item"
-                                style="border:none; background:transparent; opacity:1; padding: 4px 0;">
-                                <div class="skeleton-text" style="width: 80%;"></div>
-                            </div>
-                            <div class="micro-list-item"
-                                style="border:none; background:transparent; opacity:1; padding: 4px 0;">
-                                <div class="skeleton-text" style="width: 60%;"></div>
-                            </div>
-                        </div>
+                        <div id="deadline-list-container" class="dashboard-dynamic-list"></div>
                     </div>
                 </div>
 
@@ -99,43 +85,32 @@
                 <div id="urgenze-card" data-href="urgenze.html" data-ui-section="urgenze" role="button" tabindex="0"
                     class="matrix-red border-glow urgenze-box no-lift">
                     <div class="bg-icon-container" style="bottom: 10px; right: 5px;">
-                        <span class="material-symbols-outlined titanium-icon-xl" role="img" aria-label="Allarmi Urgenze"
-                            data-t-aria="aria_emergencies">warning</span>
+                        <span class="material-symbols-outlined titanium-icon-xxl" role="img" aria-label="Avviso Urgenze"
+                            data-t-aria="aria_urgencies">warning</span>
                     </div>
                     <div class="box-content-main">
                         <div class="box-header-flex">
-                            <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 0.25rem;">
-                                <span id="emergency-count-badge" class="urgent-badge loading-pulse"
-                                    style="margin-left: 0;">
-                                    <span id="emergency-count">---</span>
+                            <div class="title-group">
+                                <h3 data-t="section_urgencies_title">Urgenze</h3>
+                                <span id="expired-count-badge" class="urgent-badge" style="opacity: 0;">
+                                    <span id="expired-count">0</span>
                                 </span>
-                                <h3 data-t="section_emergencies_title" style="margin-bottom: 0;">Urgenze</h3>
                             </div>
-                            <p data-ui="hint" data-t="section_emergencies_desc">Documenti scaduti o mancanti</p>
+                            <p data-ui="hint" data-t="section_urgencies_desc">Pratiche scadute</p>
                         </div>
-                        <div id="urgenze-list" class="dashboard-dynamic-list no-scrollbar">
-                            <div class="micro-list-item"
-                                style="border:none; background:transparent; opacity:1; padding: 4px 0;">
-                                <div class="skeleton-text" style="width: 70%;"></div>
-                            </div>
-                            <div class="micro-list-item"
-                                style="border:none; background:transparent; opacity:1; padding: 4px 0;">
-                                <div class="skeleton-text" style="width: 50%;"></div>
-                            </div>
-                        </div>
+                        <div id="urgenze-list" class="dashboard-dynamic-list no-scrollbar"></div>
                     </div>
                 </div>
             </div>
         </main>
 
+        <!-- FOOTER PLACEHOLDER -->
+        <div id="footer-placeholder"></div>
     </div>
 
-    <!-- FOOTER PLACEHOLDER -->
-    <div id="footer-placeholder"></div>
-
     <!-- SCRIPTS MODULARI (10/10 Architecture) -->
-    <script type="module" src="assets/js/main.js?v=3.5"></script>
-    <script type="module" src="assets/js/home.js?v=3.5"></script>
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/home.js"></script>
 </body>
 
 </html>
